# d1-graphics-tool

./: .editorconfig  .gitignore  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  CONTRIBUTING.md  D1GraphicsTool.pro  README.md  TODO.md  build-deb.sh  celview.cpp  celview.h  celview.ui  d1cel.cpp  d1cel.h  d1celbase.cpp  d1celbase.h  d1cl2.cpp  d1cl2.h  d1files.qrc  d1min.cpp  d1min.h  d1pal.cpp  d1pal.h  d1til.cpp  d1til.h  d1trn.cpp  d1trn.h  exportdialog.cpp  exportdialog.h  exportdialog.ui  levelcelview.cpp  levelcelview.h  levelcelview.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  palview.cpp  palview.h  (+2 more)
.github/workflows/: clang-format-check.yml  linux-qt5.yml  linux.yml  qmake.yml  windows-32.yml  windows.yml
debian/DEBIAN/: control
debian/usr/share/applications/: D1GraphicsTool.desktop
releases/: release.ps1  windeployqt.bat
resources/: D1GraphicsTool.qss  d1files.qrc  default.pal
source/: .clang-format  .clang-tidy  .editorconfig  D1GraphicsTool.pro  batchexportdialog.cpp  batchexportdialog.h  batchexportdialog.ui  celview.cpp  celview.h  celview.ui  command.cpp  command.h  config.cpp  config.h  d1amp.cpp  d1amp.h  d1cel.cpp  d1cel.h  d1celbase.cpp  d1celbase.h  d1celframe.cpp  d1celframe.h  d1celtileset.cpp  d1celtileset.h  d1celtilesetframe.cpp  d1celtilesetframe.h  d1cl2.cpp  d1cl2.h  d1clx.cpp  d1clx.h  d1files.qrc  d1gfx.cpp  d1gfx.h  d1image.cpp  d1image.h  d1min.cpp  d1min.h  d1mpq.cpp  d1mpq.h  d1pal.cpp  (+50 more)
source/config/: config.cpp  config.h
source/d1formats/: d1amp.h  d1cel.cpp  d1cel.h  d1celframe.h  d1celtileset.h  d1celtilesetframe.h  d1cl2.cpp  d1cl2.h  d1gfx.cpp  d1gfx.h  d1image.h  d1sol.cpp  d1til.h  d1trn.cpp  d1trn.h  pcx.cpp  pcx.h
source/dialogs/: exportdialog.cpp  exportdialog.h  importdialog.cpp  importdialog.h  importdialog.ui  openasdialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
source/palette/: d1pal.cpp  d1pal.h  d1palhits.cpp  d1palhits.h
source/undostack/: command.cpp  command.h  framecmds.cpp  framecmds.h  undomacro.cpp  undomacro.h  undostack.cpp  undostack.h
source/views/: celview.cpp  celview.h  celview.ui  levelcelview.cpp  levelcelview.h  levelcelview.ui  view.cpp  view.h
source/widgets/: leveltabframewidget.cpp  leveltabsubtilewidget.cpp  leveltabsubtilewidget.ui  leveltabtilewidget.cpp  palettewidget.cpp  palettewidget.h
